[tool.poetry]
name = "tempo-app"
version = "0.1.0"
description = "A minimalist, open-source meal tracking app"
authors = ["Rahul"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.45.0"
python-dotenv = "^1.1.0"
openai = "^1.77.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
